# cli

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  bootstrap.cmake  profile.sh
.github/workflows/: ApiTest.yml
SDK/: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
tests/: CMakeLists.txt
